--- a/netflix.html
+++ b/netflix.html
@@ -39,14 +39,26 @@
                     <p> Chromecast, Apple TV, Blu-ray players and more.</p>
 
                </div class="divimg">
-               <img class="tvimage" src="https://www.the-ambient.com/media/imager/201911/29707-original.jpg">
+               <div class="imagevideo">
+                    <img class="tvimage"
+                         src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/tv.png">
+
+                    <video class="firstvideo" autoplay playsinline loop muted>
+                         <source
+                              src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/video-tv-in-0819.m4v"
+                              type="video/mp4">
+                    </video>
+               </div>
+
+
                <div>
 
                </div>
           </div>
           <div class="thirddiv">
                <div class="div2img">
-                    <img class="tvimage2" src="https://i.scdn.co/image/ab67706c0000bebbedb280334792b031b8f21d48">
+                    <img class="tvimage2"
+                         src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/mobile-0819.jpg">
                     <div>
 
                     </div>
@@ -69,8 +81,12 @@
                </div>
                <div class="divimg">
                     <img class="tvimage"
-                         src="https://img.buzzfeed.com/buzzfeed-static/static/2019-04/18/22/asset/buzzfeed-prod-web-03/sub-buzz-1301-1555640031-1.jpg?crop=908:1035;0,0&resize=990:*?output-quality=auto&output-format=auto&downsize=640:*">
-
+                         src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/device-pile-in.png">
+                    <video class="secondvideo" autoplay muted loop>
+                         <source
+                              src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/video-devices-in.m4v"
+                              type="video/mp4">
+                    </video>
                </div>
 
 
@@ -78,16 +94,16 @@
           <div class="thirddiv">
                <div class="div2img">
                     <img class="tvimage2"
-                         src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/best-kids-shows-netflix-carmen-sandiego-1553011737.jpg?crop=0.564xw:1.00xh;0.279xw,0&resize=640:*">
+                         src="https://occ-0-6246-2164.1.nflxso.net/dnm/api/v6/19OhWN2dO19C9txTON9tvTFtefw/AAAABVxdX2WnFSp49eXb1do0euaj-F8upNImjofE77XStKhf5kUHG94DPlTiGYqPeYNtiox-82NWEK0Ls3CnLe3WWClGdiJP.png?r=5cf">
                     <div>
 
                     </div>
                </div>
                <div class="contentnew2">
-                    <h1 class="heading2">Download your shows</h1>
-                    <h1>to watch offline.</h1>
-                    <p>Save your favourites easily and always have</p>
-                    <p> something to watch.</p>
+                    <h1 class="heading2">Create profiles for children.</h1>
+                    <p>Send children on adventures with their</p>
+                    <p>favourite characters in a space made just for</p>
+                    <p> them—free with your membership.</p>
 
                </div>
 
@@ -96,12 +112,13 @@
           <div class="fourthddiv">
                <h1 class="last-title">Frequently Asked Questions</h1>
                <div class="buttoncontent">
-                    <button class="b1"></button><br>
-                    <button class="b1"></button><br>
-                    <button class="b1"></button><br>
-                    <button class="b1"></button><br>
-                    <button class="b1"></button><br>
-                    <button class="b1"></button><br>
+                    <button class="b1" onclick="adddiv()">What is netflix?
+                    </button><br>
+                    <button class="b1">How much does Netflix cost?</button><br>
+                    <button class="b1">Where can I watch?</button><br>
+                    <button class="b1">How do i cancel?</button><br>
+                    <button class="b1">What can I watch on Netflix?</button><br>
+                    <button class="b1">Is Netlflix good for kids?</button><br>
 
 
                </div>
@@ -142,10 +159,15 @@
 
                     </div>
                </div>
+               <select class="language2">
+                    < <option value="english"> English</option>
+                         <option value="hindi">Hindi</option>
+               </select>
 
           </div>
 
      </div>
+
 
 </body>
 
